test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-15.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "main",
    "outputs": [
      {
        "components": [],
        "name": "",
        "type": "()",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
