test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-52.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "main",
    "outputs": [
      {
        "components": [
          {
            "components": [],
            "name": "A",
            "type": "()",
            "typeArguments": null
          },
          {
            "components": [],
            "name": "B",
            "type": "()",
            "typeArguments": null
          },
          {
            "components": [],
            "name": "C",
            "type": "()",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "enum E",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
