test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-70.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "main",
    "outputs": [
      {
        "components": [
          {
            "components": [
              {
                "components": null,
                "name": "__tuple_element",
                "type": "b256",
                "typeArguments": null
              },
              {
                "components": null,
                "name": "__tuple_element",
                "type": "b256",
                "typeArguments": null
              }
            ],
            "name": "first",
            "type": "(b256, b256)",
            "typeArguments": null
          },
          {
            "components": [
              {
                "components": null,
                "name": "first",
                "type": "u32",
                "typeArguments": null
              },
              {
                "components": [
                  {
                    "components": null,
                    "name": "first",
                    "type": "b256",
                    "typeArguments": null
                  },
                  {
                    "components": null,
                    "name": "second",
                    "type": "u32",
                    "typeArguments": null
                  }
                ],
                "name": "second",
                "type": "enum LowerLevelEnum",
                "typeArguments": null
              }
            ],
            "name": "second",
            "type": "struct ThenAStruct",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "enum TopLevelEnum",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
