test/src/e2e_vm_tests/snapshots/test__e2e_vm_tests__harness__json_abi-71.snap
---
source: test/src/e2e_vm_tests/harness.rs
expression: output_contents
---
[
  {
    "inputs": [],
    "name": "main",
    "outputs": [
      {
        "components": [
          {
            "components": null,
            "name": "name",
            "type": "str[9]",
            "typeArguments": null
          }
        ],
        "name": "",
        "type": "struct Wrapper",
        "typeArguments": null
      }
    ],
    "type": "function"
  }
]
